tests/negative/semantic/array_set_float_into_int/input.ci
void main() {
    int[] xs = [1];
    arraySet(xs, 0, 1.5);
}
